# webai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agents_guide.ipynb  app.py  news_guide.ipynb  pyproject.toml  query_translation.py  requirements.txt  test.py  ticker_guide.ipynb  tools_findings_plan.md  tools_guide.ipynb
.claude/: settings.local.json
.claude/output-styles/: co_debt_coding_style.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/breakdown/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/git-commit/: SKILL.md
.claude/skills/notebook-guide/: SKILL.md
.claude/skills/py-project-init/: SKILL.md
.claude/skills/sync-deps/: SKILL.md
.claude/skills/sync-deps/scripts/: sync_deps.py
.claude/skills/update-docs/: SKILL.md
agents/: __init__.py  demo.py  webai_agent.py
agents/tools/: __init__.py  news_tools.py  ticker_tools.py  web_search_tools.py
webai/: __init__.py  news.py  ticker.py  tools.py  utils.py
