[tool.poetry]
name = "webai"
version = "0.1.0"
description = ""
authors = ["Luigi <luigi@example.com>"]
readme = "README.md"

packages = [
    { include = "webai"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain_openai = ">=1.0.2"
langchain_tavily = ">=0.2.13"
langchain_core = ">=1.0.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"